--- a/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/app.component.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/app.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="game__container">
         <div class="players-actions__container">
-            <app-players class="players__container"></app-players>
+            <app-players class="players__container" [players] = "Players"></app-players>
             <app-game-actions class="actions__container"></app-game-actions>
         </div>
         <app-game></app-game>
