--- a/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/game-actions/game-actions.component.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/game-actions/game-actions.component.html
@@ -1,2 +1,3 @@
 <!DOCTYPE html>
-<p>game-actions works!</p>
+<button type="button" class="action__button">Reset current game</button>
+<button type="button" class="action__button">Reset all</button>
