--- a/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/game-actions/game-actions.component.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/game-actions/game-actions.component.css
@@ -1,3 +1,26 @@
 * {
   padding: 0;
 }
+
+.action__button {
+  width: 100%;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #78D4F1;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFF;
+  border: 0;
+  margin: 0 0 16px;
+  transition: all .3s linear;
+}
+
+.action__button:hover {
+  opacity: .8;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: #939FA1 5px 5px;
+}
