added markup for game blocks

--- a/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/app.component.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/app.component.html
@@ -20,9 +20,9 @@
     </div>
     <div class="game__container">
         <div class="players-actions__container">
-            <app-players class="players__container" [players] = "Players"></app-players>
+            <app-players class="players__container" [players] = "players"></app-players>
             <app-game-actions class="actions__container" (onClick)="resetPlayersScores()"></app-game-actions>
         </div>
-        <app-game></app-game>
+        <app-game class="game" [gameState]="state"></app-game>
     </div>
 </body>
