--- a/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/game/game.component.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/game/game.component.html
@@ -1,2 +1,6 @@
 <!DOCTYPE html>
-<p>game works!</p>
+<ul class="game__list">
+    <li class="game__list__row" *ngFor="let row of gameState">
+        <div *ngFor="let symbol of row">{{symbol}}</div>
+    </li>
+</ul>
