--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/9-animations/animation.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/9-animations/animation.css
@@ -11,7 +11,7 @@
 .section-hero__teaser-picture {
   opacity: 0;
   transform: translateY(70%);
-  transition: all 2s ease;
+  transition: transform 2s ease;
 }
 
 .advantages-list__item-icon,  .advantages-list__item {
@@ -19,7 +19,7 @@
 }
 
 .advantages-list__item:hover {
-  transform: scale(1.3);
+  transform: scale(1.2);
 }
 
 .advantages-list__item:hover .advantages-list__item-icon *:nth-child(1) {
@@ -32,43 +32,33 @@
   opacity: 0;
 }
 
-.gallery.show .gallery__image {
-  opacity: 1;
-}
-
-.gallery.show  .gallery__image:nth-child(1) {
-  animation-name: slideLeft;
-  animation-duration: 2s;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-  animation-timing-function: ease-in;
-}
-
+.gallery.show  .gallery__image:nth-child(1),
 .gallery.show  .gallery__image:nth-child(2) {
   animation-name: slideLeft;
   animation-duration: 2s;
   animation-delay: 0s;
   animation-iteration-count: 1;
   animation-direction: normal;
-  animation-timing-function: ease;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
 }
 
-.gallery.show  .gallery__image:nth-child(3) {
-  animation-name: slideRight;
-  animation-duration: 2s;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-  animation-timing-function: ease;
-}
-
+.gallery.show  .gallery__image:nth-child(3),
 .gallery.show  .gallery__image:nth-child(4) {
   animation-name: slideRight;
   animation-duration: 2s;
   animation-delay: 0s;
   animation-iteration-count: 1;
   animation-direction: normal;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+.gallery.show  .gallery__image:nth-child(2) {
+  animation-timing-function: ease;
+}
+
+.gallery.show  .gallery__image:nth-child(4) {
   animation-timing-function: ease-in;
 }
 
@@ -82,51 +72,19 @@
   border-color: var(--theme-brand-color);
   background: var(--theme-text-color);
   cursor: pointer;
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 button {
-  box-shadow: 0 0 5px 5px transparent;
-  transition: all 1s ease;
+  transition: color .1s ease-in, border-color .1s ease-in;
 }
 
 button:hover {
-  box-shadow: 0 0 5px 5px var(--theme-brand-color);
-  border: 1px solid #000;
-  transition: box-shadow 1s ease, border 1s ease;
+  border-color: var(--theme-text-color);
 }
 
-.call-to-action-btn::before {
-  content: "\2193";
-  display: block;
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  z-index: -1;
-  color: var(--theme-text-color);
-  font-size: 1px;
-  transition: bottom 1s ease, transform 1s ease;
-  animation-name: slideUp;
-  animation-duration: 5s;
-  animation-delay: 0s;
-  animation-iteration-count: infinite;
-  animation-direction: normal;
-  animation-timing-function: ease-out;
-}
-
-.section-hero .call-to-action-btn::before {
-  bottom: 45px;
-  left: 75px;
-}
-
-.section-advantage__content .call-to-action-btn::before {
-  bottom: 95px;
-  left: 575px;
-}
-
-.section-resume .call-to-action-btn::before {
-  bottom: 455px;
-  left: 75px;
+.call-to-action-btn {
+  animation: pulse 4s linear .1s infinite forwards;
 }
 
 .list__link::after {
@@ -135,7 +93,7 @@ button:hover {
   width: 0;
   height: 2px;
   background-color: var(--theme-brand-color);
-  transition: width 1s ease;
+  transition: width .5s ease;
 }
 
 .list__link {
@@ -189,20 +147,33 @@ button:hover {
   }
 }
 
-@keyframes slideUp {
+@keyframes pulse {
 
-  0%,
-  80% {
-    font-size: 5px;
-    opacity: 1;
+  0% {
+    transform: scale(1);
   }
 
-  90% {
-    opacity: 1;
-    font-size: 37px;
+  89% {
+    transform: scale(1);
+  }
+
+  91% {
+    transform: scale(.96);
+  }
+
+  94% {
+    transform: scale(1);
+  }
+
+  95% {
+    transform: scale(1);
+  }
+
+  97% {
+    transform: scale(.96);
   }
 
   100% {
-    opacity: 0;
+    transform: scale(1);
   }
 }
