added clear button

--- a/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/app.component.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/app.component.html
@@ -19,7 +19,7 @@
             [height]="'36'"
             viewBox="0 0 36 36"
         ></svg-icon-sprite>
-        Player 1 turn
+        {{currentPlayer}}
     </div>
     <div class="game__container">
         <div class="players-actions__container">
