--- a/homeworks/maksym.selenkov_MaksymSelenkov/9-animations/light.css
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/9-animations/light.css
@@ -1,5 +1,4 @@
-* {
-  color: var(--color-black);
+:root {
   --color-grey: #585858;
   --color-black: #000;
   --color-white: #FFF;
@@ -10,11 +9,11 @@
   color: var(--color-grey);
 }
 
-.controls__in {
+.primary-button {
   color: var(--color-grey);
 }
 
-.controls__up {
+.secondary-button {
   background-color: var(--color-carrot);
   color: var(--color-white);
 }
@@ -23,23 +22,8 @@
   color: var(--color-carrot);
 }
 
-.start__button {
-  background-color: var(--color-carrot);
-  color: var(--color-white);
-}
-
-.needs__button {
-  background-color: var(--color-carrot);
-  color: var(--color-white);
-}
-
 .bottom-container {
   background: linear-gradient(180deg, #F9F9F9 22.12%, rgba(249, 249, 249, 0) 100%);
-}
-
-.dream__button {
-  background-color: var(--color-carrot);
-  color: var(--color-white);
 }
 
 .line {
