10-components/Fix links latest change

--- a/homeworks/serhii.kulakivskyi_svkul/10-components/tic-tac-toe/src/app/components/sidebar/sidebar.component.html
+++ b/homeworks/serhii.kulakivskyi_svkul/10-components/tic-tac-toe/src/app/components/sidebar/sidebar.component.html
@@ -1,11 +1,10 @@
-<!DOCTYPE HTML>
 <section class="sidebar">
     <app-player-info
         id="1"
         icon="x"
         [name]="player1"
         [score]="player1Score"
-        (input)="changePlayerName($event)"
+        (inputHandle)="changePlayerName($event)"
     ></app-player-info>
 
     <app-player-info
@@ -14,6 +13,6 @@
         classes="rotate"
         [name]="player2"
         [score]="player2Score"
-        (input)="changePlayerName($event)"
+        (inputHandle)="changePlayerName($event)"
     ></app-player-info>
 </section>
