--- a/homeworks/serhii.kulakivskyi_svkul/10-components/tic-tac-toe/src/app/app.component.html
+++ b/homeworks/serhii.kulakivskyi_svkul/10-components/tic-tac-toe/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!DOCTYPE HTML>
 <section class="game" [attr.theme]="currentPlayer">
     <app-header [title]="title"></app-header>
 
@@ -8,7 +7,7 @@
             [player2]="player2"
             [player1Score]="player1Score"
             [player2Score]="player2Score"
-            (input)="changePlayerName($event)"
+            (inputHandle)="changePlayerName($event)"
         ></app-sidebar>
 
         <section app-game
