--- a/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/game-actions/game-actions.component.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/game-actions/game-actions.component.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
-<button type="button" class="action__button">Reset current game</button>
-<button type="button" class="action__button" (click)="resetPlayersScore()">Reset all</button>
+<button type="button" class="action__button" (click)="resetPlayersScore()">Reset current game</button>
+<button type="button" class="action__button" (click)="resetGame()">Reset all</button>
