--- a/homeworks/nikolay.krasniuk_Kingstar22/9-animations/style.css
+++ b/homeworks/nikolay.krasniuk_Kingstar22/9-animations/style.css
@@ -55,7 +55,7 @@ a {
   text-decoration: none;
 }
 
-.container {
+.page__section {
   margin: 0 auto;
   max-width: 1390px;
 }
@@ -458,7 +458,7 @@ a {
   color: var(--color-elements);
 }
 
-.pageUp {
+.page__up {
   display: none;
   position: fixed;
   bottom: 25px;
@@ -467,17 +467,17 @@ a {
   height: 40px;
 }
 
-.pageUp-show {
+.page__up-show {
   display: block;
 }
 
-.pageUp-icon {
+.page__up-icon {
   fill: var(--color-elements);
   width: 100%;
   height: 100%;
 }
 
-.pageUp::after {
+.page__up::after {
   content: "";
   border-radius: 100%;
   border: 4px solid var(--color-active-a);
@@ -514,6 +514,7 @@ a {
   top: 0;
   left: 0;
   background: rgba(255, 255, 255);
+  z-index: 3;
 }
 
 .screen-icon {
