--- a/homeworks/konstantin.rusenko_ConstantinRusenko/10-components/tic-tac-toe/src/app/app.component.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/10-components/tic-tac-toe/src/app/app.component.css
@@ -1,10 +1,88 @@
-.field {
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main__turn {
+  font-size: 26px;
+}
+
+.main__players-name {
   display: flex;
 }
 
+.main__player {
+  display: flex;
+  align-items: center;
+  margin: 0 2%;
+}
+
+.player-name__input {
+  padding: 20px;
+}
+
+.player__score {
+  margin-left: 5px;
+  font-size: 36px;
+}
+
+.field {
+  display: flex;
+  justify-content: center;
+}
+
 .box {
-  background: #F6F;
   min-width: 25px;
   min-height: 25px;
   text-align: center;
+  background: #C4C4C4;
+  padding: 25px;
+  margin: 5px;
+  font-size: 21px;
+  font-weight: 700;
+}
+
+.box:hover {
+  opacity: .8;
+  cursor: pointer;
+}
+
+.main__winner-message {
+  position: absolute;
+  top: 25px;
+  left: 40%;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  padding: 25px;
+  border-radius: 6px;
+  background: #78D4F1;
+  color: #000;
+}
+
+.main__control-buttons {
+  display: flex;
+}
+
+.control-button {
+  margin: 10px 20px;
+}
+
+@media (max-width: 992px) {
+
+  .main__players-name {
+    flex-direction: column;
+  }
+
+  .main__control-buttons {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 576px) {
+
+  .input {
+    width: 70%;
+  }
 }
