--- a/homeworks/konstantin.rusenko_ConstantinRusenko/10-components/tic-tac-toe/src/app/app.component.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/10-components/tic-tac-toe/src/app/app.component.html
@@ -1,15 +1,19 @@
-<p>Player {{currentPlayer.name}} turn</p>
-<div *ngIf="winner">{{winner.name}} is a winner!!!</div>
-<div>
-    <div *ngFor="let player of players">
-        <input [value]="player.name" (input)="renamePlayer($event, player)">{{player.score}}
+<app-header [title]="title"></app-header>
+<main class="main">
+    <p class="main__turn">Player {{currentPlayer.name}} turn</p>
+    <div class="main__winner-message" *ngIf="winner">{{winner.name}} is a winner!!!</div>
+    <div class="main__players-name">
+        <div class="main__player" *ngFor="let player of players">
+            <input class="player-name__input input" [value]="player.name" (input)="renamePlayer($event, player)">
+            <p class="player__score">{{player.score}}</p>
+        </div>
     </div>
-</div>
-<div class="field" *ngFor="let row of gameCoords; index as rowIndex">
-    <div class="box" *ngFor="let item of row; index as columnIndex" (click)="setElement(rowIndex, columnIndex)">{{item}}</div>
-</div>
-<div>
-    <button type="button" (click)="resetGame()"> Reset Game</button>
-    <button type="button" (click)="resetAll()"> Reset All</button>
-</div>
+    <div class="field" *ngFor="let row of gameCoords; index as rowIndex">
+        <div class="box" *ngFor="let item of row; index as columnIndex" (click)="setElement(rowIndex, columnIndex)">{{item}}</div>
+    </div>
+    <div class="main__control-buttons">
+        <button type="button" class="button control-button " (click)="resetGame()"> Reset Game</button>
+        <button type="button" class="button control-button " (click)="resetAll()"> Reset All</button>
+    </div>
+</main>
 
