--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/app.component.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/app.component.html
@@ -1,1 +1,4 @@
 <router-outlet></router-outlet>
+<app-game-dashboard></app-game-dashboard>
+<app-game-field></app-game-field>
+<app-game-state></app-game-state>
