--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/9-animations/style.css
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/9-animations/style.css
@@ -151,7 +151,7 @@
   border-radius: 4px;
   height: 56px;
   max-width: 205px;
-  animation: button-hover-anim 50s cubic-bezier(.12, 0, .39, 0) infinite alternate;
+  animation: button-hover-anim 25s cubic-bezier(.12, 0, .39, 0) infinite alternate;
 }
 
 .header {
@@ -202,7 +202,7 @@
   width: 0;
   height: 1.5px;
   background-color: var(--button-color);
-  transition: width 1s ease-in-out;
+  transition: width .5s ease-in-out;
   transform: translateX(-50%);
 }
 
@@ -219,7 +219,7 @@
   background: none;
   border: none;
   cursor: pointer;
-  animation: button-hover-anim 50s cubic-bezier(.12, 0, .39, 0) infinite alternate;
+  animation: button-hover-anim 25s cubic-bezier(.12, 0, .39, 0) infinite alternate;
 }
 
 .header__sign-in {
