--- a/homeworks/vadim.fedonyuk_Vadim1997/7-oop/src/style.css
+++ b/homeworks/vadim.fedonyuk_Vadim1997/7-oop/src/style.css
@@ -90,10 +90,10 @@ body {
 .gallery-section__load-icon {
   width: 50px;
   height: 50px;
-  -webkit-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
 }
 
-@-webkit-keyframes spin {
+@keyframes spin {
 
   0% {
     -webkit-transform: rotate(0deg);
